
New in this Isabelle version
----------------------------

*** General ***

* Discontinued obsolete 'uses' within theory header.  Note that
commands like 'ML_file' work without separate declaration of file
dependencies.  Minor INCOMPATIBILITY.

* Discontinued redundant 'use' command, which was superseded by
'ML_file' in Isabelle2013.  Minor INCOMPATIBILITY.


*** HOL ***

* Discontinued obsolete src/HOL/IsaMakefile (considered legacy since
Isabelle2013).  Use "isabelle build" to operate on Isabelle sessions.

* Numeric types mapped by default to target language numerals:
natural (replaces former code_numeral) and integer (replaces
former code_int).  Conversions are available as integer_of_natural /
natural_of_integer / integer_of_nat / nat_of_integer (in HOL) and
Code_Numeral.integer_of_natural / Code_Numeral.natural_of_integer (in ML).
INCOMPATIBILITY.

* Discontinued theories Code_Integer and Efficient_Nat by a more
fine-grain stack of theories Code_Target_Int, Code_Binary_Nat,
Code_Target_Nat and Code_Target_Numeral.  See the tutorial on
code generation for details.  INCOMPATIBILITY.

* Theory "RealVector" and "Limits": Introduce type class
(lin)order_topology. Allows to generalize theorems about limits and
order. Instances are reals and extended reals.

* Consolidation of library theories on product orders:

    Product_Lattice ~> Product_Order -- pointwise order on products
    Product_ord ~> Product_Lexorder -- lexicographic order on products

INCOMPATIBILITY.

* Sledgehammer:

  - Renamed option:
      isar_shrink ~> isar_compress


New in Isabelle2013 (February 2013)
-----------------------------------

*** General ***

* Theorem status about oracles and unfinished/failed future proofs is
no longer printed by default, since it is incompatible with
incremental / parallel checking of the persistent document model.  ML
function Thm.peek_status may be used to inspect a snapshot of the
ongoing evaluation process.  Note that in batch mode --- notably