@@ -28,7 +28,6 @@
     "assume"
     "attribute_setup"
     "axiomatization"
-    "axioms"
     "back"
     "bundle"
     "by"
@@ -349,7 +348,6 @@
     "arities"
     "attribute_setup"
     "axiomatization"
-    "axioms"
     "bundle"
     "class"
     "classes"
