@@ -30,7 +30,6 @@
     "attribute_setup"
     "ax_specification"
     "axiomatization"
-    "axioms"
     "back"
     "bnf_def"
     "boogie_end"
@@ -472,7 +471,6 @@
     "atom_decl"
     "attribute_setup"
     "axiomatization"
-    "axioms"
     "boogie_end"
     "boogie_open"
     "bundle"
