@@ -32,7 +32,6 @@ sig
     (Attrib.binding * string list) list -> theory ->
     (term list * thm list list) * theory
   val axiom: Attrib.binding * term -> theory -> thm * theory
-  val axiom_cmd: Attrib.binding * string -> theory -> thm * theory
   val definition:
     (binding * typ option * mixfix) option * (Attrib.binding * term) ->
     local_theory -> (term * (string * thm)) * local_theory
@@ -193,7 +192,6 @@ val axiomatization = gen_axioms check_specification;
 val axiomatization_cmd = gen_axioms read_specification;
 
 fun axiom (b, ax) = axiomatization [] [(b, [ax])] #>> (hd o hd o snd);
-fun axiom_cmd (b, ax) = axiomatization_cmd [] [(b, [ax])] #>> (hd o hd o snd);
 
 
 (* definition *)
